--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Wecome to ListLover.com</h1>
     <p>Here are some starting links</p>
-    <a href="/home/francis/Desktop/project Secret/login.html">Login</a>
+    <a href="https://github.com/FrancisBaro2013/Listlover.com/blob/main/login.html">Login</a>
 </body>
 
 </html>
